# Render

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  depth_viewport.md  readme.md  remember.md
Render/: CMakeLists.txt
Render/src/: Application.cpp  Application.hpp  ComPointer.hpp  Console.cpp  D3D12Context.cpp  D3D12Context.hpp  D3D12ContextExport.cpp  DLLMacro.hpp  GraphicsContext.cpp  LayerStack.cpp  LayerStack.hpp  SampleRender.cpp  SampleRender.hpp  TestLayer.cpp  Win32Window.cpp  Win32Window.hpp  Window.cpp  Window.hpp
Render/src/Core/: Application.cpp  Application.hpp  ApplicationStarter.cpp  ApplicationStarter.hpp  Console.cpp  Console.hpp  Layer.cpp  Layer.hpp  TestLayer.hpp
Render/src/Graphics/: Buffer.cpp  Buffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Shader.cpp  Shader.hpp
Render/src/Platform/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12Context.cpp  D3D12Context.hpp  D3D12Shader.cpp  D3D12Shader.hpp
Render/src/Platform/Graphics/VK/: VKBuffer.cpp  VKBuffer.hpp  VKContext.cpp  VKContext.hpp  VKShader.cpp  VKShader.hpp
Render/src/Platform/Window/SDL3/: SDL3Window.cpp  SDL3Window.hpp
Render/src/Platform/Window/Win32/: Win32Window.cpp  Win32Window.hpp
Render/src/Window/: Window.cpp  Window.hpp
ShaderManager/: CMakeLists.txt
ShaderManager/src/: BufferLayout.cpp  BufferLayout.hpp  CSOCompiler.cpp  CSOCompiler.hpp  Compiler.cpp  Compiler.hpp  CompilerExceptions.cpp  CompilerExceptions.hpp  DXCSafeInclude.hpp  InputBufferLayout.cpp  InputBufferLayout.hpp  SPVCompiler.cpp  SPVCompiler.hpp  SamplerLayout.cpp  SamplerLayout.hpp  ShaderManagerDLLMacro.hpp  TextureLayout.cpp  TextureLayout.hpp  UniformsLayout.cpp  UniformsLayout.hpp
TargetView/: CMakeLists.txt
TargetView/assets/shaders/: HelloTriangle.hlsl  keywords.hlsl
TargetView/src/: .gitignore  D3D12ContextExport.cxx.in  Entrypoint.hpp  target.cpp
Utils/: CMakeLists.txt
Utils/src/: ComPointer.hpp  CommonException.cpp  CommonException.hpp  Console.cpp  Console.hpp  FileHandler.cpp  FileHandler.hpp  Image.cpp  Image.hpp  JPEGImage.cpp  JPEGImage.hpp  PNGImage.cpp  PNGImage.hpp  UtilsDLLMacro.hpp
installers/: d3d12core.ps1  d3d12ma.ps1  dxc.ps1  libjpeg_turbo.ps1  libpng.ps1  spdlog.ps1  spirv_headers.ps1  spirv_tools.ps1  vma.ps1  vulkan_extensions.ps1  vulkan_headers.ps1  vulkan_loader.ps1  vulkan_regedit.ps1  vulkan_validation.ps1  zlib.ps1
