set(TARGET_NAME Utils)

set(LIB_TYPE STATIC)
if(BUILD_SHARED_LIBS)
	set(LIB_TYPE SHARED)
endif()

file(GLOB_RECURSE UTILS_HDRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.hpp")
file(GLOB_RECURSE UTILS_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")

set(PNG_SUFFIX)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(PNG_SUFFIX d)
endif()

if(WIN32)
trace_dependency(NAME spdlog INSTALL_SCRIPT "${PROJECT_SOURCE_DIR}/installers/spdlog.ps1")
trace_dependency(NAME ZLIB INSTALL_SCRIPT "${PROJECT_SOURCE_DIR}/installers/zlib.ps1")
trace_library(NAME libpng16${PNG_SUFFIX} INSTALL_SCRIPT "${PROJECT_SOURCE_DIR}/installers/libpng.ps1")
trace_dependency(NAME libjpeg-turbo INSTALL_SCRIPT "${PROJECT_SOURCE_DIR}/installers/libjpeg_turbo.ps1")
endif()

add_library(${TARGET_NAME} ${LIB_TYPE} ${UTILS_HDRS} ${UTILS_SRCS})
target_include_directories(${TARGET_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src> $<BUILD_INTERFACE:${CMAKE_PREFIX_PATH}/include>)
set_cxx_project_standards(${TARGET_NAME} 20 FALSE)
target_link_directories(${TARGET_NAME} PUBLIC ${CMAKE_PREFIX_PATH}/lib)
target_link_libraries(${TARGET_NAME} PRIVATE spdlog::spdlog libpng16${PNG_SUFFIX} libjpeg-turbo::jpeg)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	target_compile_definitions(${TARGET_NAME} PUBLIC UTILS_DEBUG_MODE)
else()
	target_compile_definitions(${TARGET_NAME} PUBLIC UTILS_RELEASE_MODE)
endif()

if(BUILD_SHARED_LIBS)
	if(WIN32)
		target_compile_definitions(${TARGET_NAME} PRIVATE SAMPLE_UTILS_DLL_MACRO_EXPORT)
		target_compile_definitions(${TARGET_NAME} INTERFACE SAMPLE_UTILS_DLL_MACRO_IMPORT)
		target_compile_definitions(${TARGET_NAME} PUBLIC UTILS_USES_WINDOWS)
	endif()
endif()
